# PatternInference

./: .env_name  .gitignore  .pre-commit-config.yaml  Makefile  Manifest.toml  Project.toml  clean-env.sh  guild.yml  init-guild.sh  install-hooks.sh  pyproject.toml  requirements.txt  setup-env.sh  update-dependencies.sh
notebooks/: bayesian-coin-flip-example.ipynb
src/: simulator.jl
src/experts/: __init__.py  histogram.py  resistance_distance.jl  resistance_distance.py
src/networks/: __init__.py  callbacks.py  summary.py
src/simulations/: __init__.py  modules.jl  offline_datasets.py  offline_resistance_expert.py  offline_simulator.jl  online_simulator.py
src/train/: gm_001.py  gm_concat_hybrid.py  gm_pure_expert.py  gm_pure_learner.py
talk/: references.bib  sbi-by-example.qmd
talk-iwr/: _quarto.yml  references.bib  sbi-rse-for-dyn-bp.qmd
talk-iwr/_extensions/grantmcdermott/clean/: clean.scss
talk-potsdam/: _quarto.yml  index.qmd  references.bib
talk-potsdam/_extensions/grantmcdermott/clean/: _extension.yml
talk-regensburg/: index.qmd
