[project]
name = "src"
version = "0.0.1"
dependencies = [
  "numpy~=1.26",
  "scipy",
  "matplotlib",
  "seaborn",
  "pandas",
  "keras~=3.4.0",
  # "torch",
  # "jax",
  "tensorflow",
  "scikit-learn",
  "guildai",
  "pre-commit",
  "tqdm",
  "jupyterlab",
  "juliacall",
]
description = "Solving the inverse problem of pattern formation with amortized Bayesian inference"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
