[project]
name = "src"
version = "0.0.1"
dependencies = [
  "numpy~=1.26",
  "scipy",
  "matplotlib",
  "seaborn",
  "pandas",
  "keras~=3.4.0",
  # "torch",
  # "jax",
  "tensorflow",
  "scikit-learn",
  "guildai",
  "pre-commit",
  "tqdm",
  "jupyterlab",
  "juliacall",
]
description = "Solving the inverse problem of pattern formation with amortized Bayesian inference"

[tool.ruff]

# more lenient line width than Black
line-length = 120
indent-width = 4

# minimum target python version
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = [
    "F401",  # unused imports
]

"tests/**/__init__.py" = [
    "F403",  # * imports
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
